2009-05-23 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a buffer overrun error that would
	  cause a core dump sometimes.

2009-04-30 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, AUTHORS: Applied the
	  patch from Zachary Clifford to enable all the AVR32
	  fuses to be set or gotten (all BOD fuse setting is
	  disabled for device safety since they can brick your
	  device.)

2009-04-29 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/atmel.c: Fix the off by one issue
	  Brad pointed out for blank checking.  Fix a bug in the
	  blank checking for devices with greater than 65k of
	  memory that were not AVR32 based, so that all the
	  memory is checked, not just a portion of the lower bytes.

2009-04-28 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/commands.c: Fix
	  a memory overlap issue between the bootloader & the
	  flash memory available for the new firmware.
	* AUTHORS: Added Brad Schick to the list of contributers.

2009-04-27 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a crash due to larger sized images
	  not being handled properly in a loop.

2009-01-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/dfu.c: Applied the patch from Zachary Clifford
	  to support Windows.
	* AUTHORS: Update the file to reflect Zach's patches.

2009-01-18 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/atmel.h, src/commands.c, src/intel_hex.c,
	  doc/dfu-programmer.1: Applied the patch from Zachary
	  Clifford to support programming user flash on the
	  AVR32 chips and reading flash information from STDIN.
	  Additionally, updated the man page.

2008-12-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/*, AUTHORS, docs/dfu-programmer.1 NEWS,
	  fedora/dfu-programmer.spec.in, configure.ac: Applied